<resources>
    <string name="app_name">GotStar</string>

    <string name="app_name2">GotStar</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_shop">Home</string>
    <string name="title_tv">TV</string>
    <string name="title_movie">Movie</string>
    <string name="title_sport">Sports</string>
    <string name="title_news">News</string>
    <string name="title_premium">Premiun</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Collection Of Awesome Category</string>
    <string name="slide_1_desc">Different Category available for with lots of Wallpaper Collection</string>

    <string name="slide_2_title">Easy to Share-Save-Set as Wallpaper</string>
    <string name="slide_2_desc">Any wallpaper can easily set as wallpaper as well as Save on Local mobile device, also can share your on Social Media</string>

    <string name="slide_3_title">Earn Reward Points</string>
    <string name="slide_3_desc">You can earn reward point daily and Redeem points used on Premium wallpaper buy</string>

    <string name="slide_4_title">Share on Social Media.</string>
    <string name="slide_4_desc">Share wallpaper on Social Media, Email, skype etc</string>

    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate App</string>
    <string name="nav_bug">Report Bugs</string>
    <string name="nav_logout">Logout</string>

    <string name="wallpapers">Wallpapers</string>
    <string name="download">Download</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="ratings">Ratings</string>
    <string name="status">Status</string>
    <string name="tags">Tags</string>
    <string name="details">Details</string>
    <string name="downloads">Downloads</string>
    <string name="favourite">Favourite</string>
    <string name="set_wallpaper">Set As</string>
    <string name="save">Save</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>

    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="home">Home</string>

    <string name="downloading_wallpaper">Downloading Wallpaper..</string>
    <string name="please_wait">Please Wait..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="share_wallpaper">Share Wallpaper</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_already_saved">Wallpaper Already Saved</string>

    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
    <string name="err_set_wall">Error when setting wallpaper</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="get_more_wall">Get more amazing wallpapers, download now</string>

    <string name="custom_settings">Change Settings</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="locally_cached_data">locally cached data</string>
    <string name="contact_us">Contact Us</string>

    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Settings</string>

    <string name="downloading">Downloading</string>

    <string name="pre_title">TV Shows, Movies &amp; Live Sports</string>

    <string name="permission_desc">Now we need your permission to continue use the application perfectly</string>
    <string name="permission_title">Everything is okey</string>
    <string name="isRTL">false</string>

    <!-- youtube -->

    <string name="youtube_api_key">AIzaSyAaJX_VFOEO48pVL-YidlEaJgRp9EmDaAw</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="loading_video">Loading video</string>

    <string name="casty_introduction_text">Use this button to connect with Chromecast</string>
    <string name="default_notification_channel_id">AndroidLiveTV</string>

    <string name="app_id">CC1AD845</string>
    <string name="cast_app_name">GoogleCastPlayer</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="list_of_videos">Select a Video Clip</string>
    <string name="ok">OK</string>
    <string name="no_device">(No Device Selected)</string>
    <string name="error">Error</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About Cast Videos</string>
    <string name="version">CastVideos: %1$s</string>
    <string name="session_reconnection_attempt">Attempting to recover previous
        session&#8230;</string>
    <string name="introducing_cast">Introducting Cast</string>

    <!-- Error messages -->
    <!-- onApplicationConnectionFailed() errors -->
    <string name="failed_to_set_volume">Failed to set the volume</string>
    <string name="failed_to_launch_app">Failed to launch application</string>
    <string name="failed_to_set_mute">Failed to adjust the volume mute</string>
    <string name="failed_to_find_app">The application you are trying to launch is not available on
        your Google Cast device
    </string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!
    </string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_to_seek">Failed to seek to the specified position on the remote device
    </string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="connection_temp_lost">Connection to the cast device is temporarily lost</string>
    <string name="connection_recovered">Connection to the cast device is recovered</string>
    <string name="connection_lost_retry">Connection to the cast device has been temporarily lost.
        Application is trying to recover connection, please try again later
    </string>
    <string name="connection_lost">No connection to the cast device exist</string>
    <string name="failed_to_perform_action">Sorry, ran into issues performing the task you wanted
    </string>
    <string name="oops">Oops</string>

    <!-- Preferences -->
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV
    </string>
    <string name="prefs_termination_policy_default">0</string>
    <string name="prefs_termination_policy_dialog_title">When Disconnecting</string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_default">device</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Tabs -->
    <string name="tab_videos_title">Videos</string>
    <string name="tab_music_title">Songs</string>
    <string name="tab_photos_title">Photos</string>

    <!-- ShowCaseView -->
    <string name="touch_to_cast">Touch to cast videos to your TV</string>

    <!-- Captions -->
    <string name="captions_settings">Captions Settings</string>
    <string name="captions">Captions</string>

    <!-- Queue -->
    <string name="show_queue">Show Queue</string>
    <string name="queue_list">Queue</string>
    <string name="transition_image">transition-image</string>
    <string name="queue_empty">Queue is empty!</string>
    <string name="queue_tag_item">queue-tag-item</string>
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="action_clear_queue">Clear Queue</string>
    <string name="queue_item_added_to_play_next">An item was added to play next</string>
    <string name="queue_item_added_to_queue">An item was added to the queue</string>

</resources>
