<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <!--  <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_shop"
        android:visible="false"
        app:showAsAction="withText" />-->

    <item
        android:id="@+id/bottom_tv"
        android:icon="@drawable/tv_selector"
        android:title="@string/title_tv"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_movie"
        android:icon="@drawable/movie_selector"
        android:title="@string/title_movie"
        app:showAsAction="withText" />


    <item
        android:id="@+id/bottom_sport"
        android:icon="@drawable/sport_selector"
        android:title="@string/title_sport"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_news"
        android:icon="@drawable/news_selector"
        android:title="@string/title_news"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_premium"
        android:icon="@drawable/premium_selector"
        android:title="@string/title_premium"
        app:showAsAction="withText" />
</menu>
