<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/navigation_channel"
            android:icon="@drawable/ic_channel"
            android:title="Channel" />

        <item
            android:id="@+id/navigation_audio"
            android:icon="@drawable/ic_audio"
            android:title="Audio" />

        <item
            android:id="@+id/navigation_watchlist"
            android:icon="@drawable/ic_watchlist"
            android:title="WatchList" />

        <item
            android:id="@+id/navigation_download"
            android:icon="@drawable/ic_download"
            android:title="Download" />

        <item
            android:id="@+id/navigation_premium"
            android:icon="@drawable/ic_premium"
            android:title="Buy Subscription" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />


    </group>
    <item android:title="General">
        <menu>
            <item
                android:id="@+id/nav_visit"
                android:icon="@drawable/ic_internet"
                android:title="About Us"
                android:visible="false" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:visible="false"
                android:title="@string/nav_rate" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />

        </menu>
    </item>

</menu>
