<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/txt_back"
                        android:layout_width="30dp"
                        android:layout_height="match_parent">

                        <TextView

                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/ic_back"
                            android:fontFamily="@font/public_bold"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/public_bold"
                        android:gravity="center"
                        android:text="@string/custom_settings"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view_setting" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@+id/switch_push"
                        android:text="@string/enable_push_notification"
                        android:textColor="@color/textView_setting"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_push"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:theme="@style/SwitchCompatTheme" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view_setting" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:id="@+id/linearLayout_clear_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clear_cache"
                            android:textColor="@color/textView_setting"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/locally_cached_data"
                                android:textColor="@color/textView_setting"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/textView_size_setting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3dp"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/textView_setting"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_clear"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/ic_brush" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view_setting" />


                <TextView
                    android:id="@+id/txt_share_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/share_app"
                    android:textColor="@color/textView_setting"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view_setting" />

                <TextView
                    android:id="@+id/txt_rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/rate_app"
                    android:textColor="@color/textView_setting"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view_setting" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>